@@ -3,3 +3,7 @@
 ## New Features
 
 - Add song downloading -- kaneryu on 2025-01-06
+
+## Bugfixes
+
+- fix None in coverconvert caused by imageCache being set too early -- kaneryu on 2025-01-06
