@@ -4,6 +4,10 @@
 
 - Add song downloading -- kaneryu on 2025-01-06
 
+## Bugfixes
+
+- fix None in coverconvert caused by imageCache being set too early -- kaneryu on 2025-01-06
+
 
 
 # Version 0.13
